   o Fixed behavior of deleting and joining lines on grid.
   o Inserted lines will now be automatically selected.
   o Alt+Click on grid will activate the clicked line, without modifying selection.
   o Actor and effect columns are now only visible if they are being used.
   o Double clicking a row will jump video to it, regardless of auto go to option.
- Toolbar will now properly disable the Jump To buttons if more than one line is selected. (AMZ)
- Fixed the toolbar "grey area" glitch (was actually a wxWidgets issue). (AMZ)
- Default video zoom can now be set in config.dat and is defaulted to 100%. (AMZ)
- Fixed crash in Translation and Styling assistants, when you attempted to move past end of file, and then play. (AMZ)
- Fixed linked commit of times, so it will only commit both times if the other was changed (to prevent damage when editing multiple lines). (AMZ)
- Fixed some bugs related to inserting overrides via the buttons over the edit box. (AMZ)
- Implemented Redo. (AMZ)
- Fonts collector will now default collection to same folder as script (Set to "?script" on config.dat). (AMZ)
- Alt+Left/Right on the video seek bar will now seek by increments of 10 frames (increment is customizeable in config.dat). (AMZ)
- Added a simple audio resync method for video playback. (AMZ)
- Audio timing will now apply to all selected lines, as well as active line. (AMZ)
- Added a volume slider bar to audio mode. (AMZ)
- Fixed some internal workings, which should make Aegisub use considerably less RAM (especially for large Karaoke files, 3-4x less RAM usage was measured with a 9 MB file). (AMZ)
- Aegisub will now dump the stack to stack.txt when it crashes with a fatal exception, which might or might not work. (AMZ)
- Audio display in SSA mode will no longer ignore clicks if it wasn't focused (AMZ)